# observable-agent-starter

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  Dockerfile  LICENSE  Makefile  README.md  demo.sh  pyproject.toml  test_fastapi.sh
.github/workflows/: ci.yml  security.yml
agents/example/: __init__.py  __main__.py
agents/triage/: __init__.py  __main__.py  agent.py  config.py  tools.py
docs/: architecture-agents.mmd  architecture-core.mmd  architecture.md  architecture.mmd
docs/how-to/: extend-baseagent.md  extend-observability-provider.md
evals/deepeval/: test_agentops.py
examples/: fastapi_server.py
examples/coding_agent/: README.md  pyproject.toml
examples/coding_agent/demo/: README.md  setup_demo.sh
examples/coding_agent/demo/sample_project/: test_calculator.py  utils.py
examples/coding_agent/src/adl_agent/: __init__.py  agent.py  cli.py  harness.py
examples/coding_agent/tests/: __init__.py  test_agent.py  test_cli.py  test_harness.py
examples/influencer_assistant/: README.md  pyproject.toml
examples/influencer_assistant/dashboard/: app.py
examples/influencer_assistant/evals/: __init__.py  test_video_ideas_quality.py
examples/influencer_assistant/prompts/: video_ideas_optimized.txt  video_ideas_tuning_report.md
examples/influencer_assistant/src/influencer_assistant/: profile.py
examples/influencer_assistant/src/influencer_assistant/dspy/: __init__.py  config.py  context.py  video_ideas.py
examples/influencer_assistant/src/influencer_assistant/training/: __init__.py  dataset.py
examples/influencer_assistant/tests/: conftest.py  test_dspy_config.py  test_dspy_video_ideas.py  test_profile_builder.py  test_training_dataset.py
examples/influencer_assistant/tests/fixtures/: creator_snapshot.json  creator_snapshot_creator_lab.json  creator_snapshot_growth_guild.json
examples/influencer_assistant/training/: tune_video_ideas.py
mcp/: servers.json
prompts/agentops/: triage.jinja
scripts/: customize_template.py
src/observable_agent_starter/: __init__.py  base_agent.py  cli.py  config.py
src/observable_agent_starter/agents/: __init__.py
src/observable_agent_starter/agents/routing/: __init__.py  __main__.py  agent.py  policy.py
src/observable_agent_starter/servers/: __init__.py  api.py
tests/: test_agentops_agent.py  test_api_server.py  test_base_agent.py  test_cli.py  test_config.py  test_fastapi_server.py  test_observability.py  test_policy.py  test_routing_agent.py
