[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "observable-agent-starter"
version = "0.2.0"
description = "Production-ready DSPy agent framework with Langfuse observability"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Observable Agent Starter Maintainers" }
]
requires-python = ">=3.10"
dependencies = [
  "dspy-ai",
  "langfuse",
  "jinja2",
  "starlette>=0.49.1"
]

[tool.hatch.build.targets.wheel]
packages = ["src/observable_agent_starter"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pyright",
  "ruff",
  "pre-commit"
]
examples = [
  "pydantic>=2.6",
  "streamlit>=1.34",
  "deepeval"
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "tests"]

[tool.ruff]
line-length = 100
src = [
  "src",
  "evals",
  "prompts",
  "examples"
]

[tool.pytest.ini_options]
addopts = "-q"

[tool.coverage.run]
source = ["src"]
omit = [
  "*/tests/*",
  "*/__pycache__/*",
  "*/.venv/*"
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
