[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "influencer-assistant-example"
version = "0.1.0"
description = "Example: DSPy content ideation with DeepEval metrics"
requires-python = ">=3.10"
dependencies = [
    "observable-agent-starter @ file://../../",
    "dspy-ai",
    "langfuse",
    "pydantic>=2.6",
    "streamlit>=1.34"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "deepeval"
]

[tool.hatch.build.targets.wheel]
packages = ["src/influencer_assistant"]
